[project]
name = "orchestration-project"
version = "0.1.0"
description = ""
authors = [
    {name = "cmpbj",email = "magnocarlos3232@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sqlalchemy (<2.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (==2.2.2)",
    "requests (>=2.32.3,<3.0.0)",
    "dbt-core (>=1.9.4,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "apache-airflow-providers-docker (>=4.3.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
